<resources>
    <string name="app_name">TsinghuaHelp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">REGISTER</string>
    <string name="id">student ID</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="confirm">确定</string>

    <string-array name="search_spinner_list">
        <item>All</item>
        <item>Teacher</item>
        <item>Student</item>
        <item>Project</item>
        <item>Plan</item>
    </string-array>

</resources>
