<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#e0e1ff"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="140dp"
        android:drawableStart="@drawable/user"
        android:hint="@string/username"
        android:background="@null"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/user" />

    <EditText
        android:id="@+id/password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/password"
        android:background="@null"
        android:drawablePadding="10dp"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/password"
        android:background="@null"
        android:drawablePadding="10dp"
        android:hint="@string/confirmpassword" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#9ab5ff"
        android:hint="Register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text = "@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/login"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>